category menu and primary meny z-index fix done for mobile devices

--- a/sass/theme/tags/_tags.scss
+++ b/sass/theme/tags/_tags.scss
@@ -7,7 +7,7 @@
     top: 30px;
     color: #ffffff;
     text-transform: uppercase;
-    z-index: 999;
+    z-index: 99;
 }
 
 .new-tag {
